Change button text from 'GitHub Discussions' to 'Discussions'

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -109,7 +109,7 @@
       "Description": "Looking for support? View our documentation site for up-to-date guides on installation, general use, and troubleshooting.",
       "Button": "View Documentation",
       "DiscordButton": "Join our Discord",
-      "DiscussionsButton": "GitHub Discussions"
+      "DiscussionsButton": "Discussions"
     },
     "Contribute": {
       "Title": "Contribute",
