--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -114,7 +114,8 @@
     "Contribute": {
       "Title": "Contribute",
       "Description": "Assist in Bluefin's development by contributing code, reporting bugs, or making feature requests. You can also sponsor individual contributors if you'd like to contribute monetarily.",
-      "Button": "Visit our GitHub"
+      "Button": "Visit our GitHub",
+      "DonateButton": "Donate"
     }
   },
   "Flock": {
